<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Програма обліку ТМЦ</string>
    <string name="all_items_btn">Всі предмети</string>
    <string name="add_new_item">Додати новий предмет</string>
     <string name="all_items_label">Список усіх предметів:</string>
    <string name="edit_name">Назва</string>
    <string name="edit_location">Розміщення</string>
    <string name="edit_inumber">Інвентарний номер</string>
    <string name="edit_description">Опис</string>
  <string name="save">Зберегти</string>
    <string name="delete">Видалити</string>
      <string name="cancel">Відмінити</string>
      <string name="new_item_label">Введіть інформацію про предмет:</string>
      <string name="edit_item_label">Редагувати інформацію про предмет</string>
      <string name="server">Сервер</string>
      <string name="add_photo_to_item">Фото</string>
      <string name="btn_choose_img">Виберіть зображення</string>
      <string name="btn_upload_img">Натисність щоб завантажити файл</string>
      <string name="show_img">Показати зображення</string>
      <string name="description">sd</string>
      <string name="category_name_label">Назва категорії</string>
      <string name="dialog_title">Ви дійсно хочете видалити категорію?</string>
      <string name="category_name">Категорія</string>
      <string name="spinner_prompt">Виберіть категорію</string>
      <string name="sometext">text</string>
      <string name="item_info">Інформація про предмет</string>
      <string name="img_server">http://slaytmc.esy.es/img/</string>
      <string name="scanning">Скануємо...</string>
      <string name="get_item_info_btn">Отримати результат</string>
      <string name="scan_code_btn">Сканувати код</string>
       <string name="edit_item_menu">Редагувати предмет</string>
      <string name="generate_qr_menu">Згенерувати QR код</string>
          <string name="delete_item_menu">Видалити предмет</string>
      <string name="add_photo_menu">Додати зображення</string>
      <string name="search_items">Пошук предметів...</string>
      <string name="clear_btn">Очистити</string>
      <string name="password">Пароль</string>
      <string name="login">Логін</string>
      <string name="show_images">Показати зображення</string>
      <string name="hello">Ласкаво просимо до додатку обліку ТМЦ</string>
      <string name="settings_label">Налаштування</string>
      <string name="admin_label">Увійти як адміністратор</string>
      <string name="get_info_by_qr">Отримати інформацію про предмет</string>
      <string name="admin_func_label">Адміністративні функції:</string>
      <string name="image_manage_label">Натисніть щоб видалити зображення</string>
      <string name="add_category_btn">Додати нову категорію</string>
      <string name="upload_image_label">Завантаження зображення</string>
     
  
</resources>