<?xml version="1.0" encoding="utf-8"?>

   <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        
     <LinearLayout
         android:layout_width="fill_parent"
              android:layout_height="fill_parent"
                android:orientation="vertical" >
              
             <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/edit_name"
        android:textSize="17dip" />

             <TextView
                 android:id="@+id/showName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                  android:text="@string/sometext"
                   android:textSize="17dip"
                 />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/edit_location"
        android:textSize="17dip" />

       <TextView
                 android:id="@+id/showLocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/sometext"
                 android:textSize="17dip"
                 />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/category_name"
        android:textSize="17dip" />

        <TextView
                 android:id="@+id/showCategory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                    android:text="@string/sometext"
                    android:textSize="17dip"
                 />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/edit_inumber"
        android:textSize="17dip" />
    <TextView
                 android:id="@+id/showINumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                    android:text="@string/sometext"
                    android:textSize="17dip"
                 />
 
 <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/edit_description"
        android:textSize="17dip" />

       <TextView
                 android:id="@+id/showDesc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                  android:text="@string/sometext"
                  android:textSize="17dip"
                  android:layout_marginBottom="10dp"
                 />

    <ua.ifntung.parkulab.galleryWigdet.GalleryViewPager
        android:id="@+id/viewer"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"/>

</LinearLayout>
</ScrollView>